helidon-stockmanager-full/yaml/deployment/serviceStockmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockmanager
  namespace: ${KUBERNETES_NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: stockmanager
  ports:
    - name: stockmanager
      protocol: TCP
      port: 8081
    - name: stockmngr-mgt
      protocol: TCP
      port: 9081
