helidon-stockmanager-full/yaml/deployment/ingressStockmanagerRules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockmanager-direct-ingress
  namespace: ${KUBERNETES_NAMESPACE}
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts: 
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
    - store.${EXTERNAL_IP}.nip.io
    secretName: tls-store
  rules:
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
  - host: store.${EXTERNAL_IP}.nip.io
    http:
      paths:
      - path: /stocklevel
        pathType: Prefix
        backend:
          service:
            name: stockmanager
            port: 
              name: stockmanager          
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockmanager-rewrite-ingress
  namespace: ${KUBERNETES_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # rewrite the requests
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts: 
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
    - store.${EXTERNAL_IP}.nip.io
    secretName: tls-store
  rules:
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
  - host: store.${EXTERNAL_IP}.nip.io
    http:
      paths:
        #any path starting with sm will have the /sm removed before being passed to the service on the specified url
        #for example this handles /sm/status -> /status on arrival at the storefront server
      - path: /sm(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: stockmanager
            port: 
              name: stockmanager    
        #any path starting with smmtg will have the /smmgt removed before being passed to the service on the specified url
      - path: /smmgt(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: stockmanager
            port: 
              name: stockmngr-mgt
